--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Create.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Create.cshtml
@@ -1,5 +1,25 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model TablicaOgloszen.Models.Post
 @{
+}
+
+<h1>Dodaj Ogłoszenie</h1>
+
+<div asp-validation-summary="All"></div>
+<form class="form-control" method="post" asp-action="Create">
+    <label class="form-label" asp-for="Title"></label>
+    <input class="form-control" asp-for="Title" />
+    <span class="form-text" asp-validation-for="Title"></span>
+    <label class="form-label" asp-for="Text"></label>
+    <input class="form-control" asp-for="Text" />
+    <span class="form-text" asp-validation-for="Text"></span>
+    <input class="btn btn-primary" type="submit" value="Create" />
+</form>
+
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
