--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Details.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Details.cshtml
@@ -1,5 +1,54 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model TablicaOgloszen.Models.User
 @{
 }
+
+<h1>Profil Użytkownika</h1>
+
+<div asp-validation-summary="All"></div>
+
+<div class="col">
+        <div class="card h-100">
+            <h5 class="card-header">Model.UserName</h5>
+            <div class="card-body">
+                @*<p class="card-title">Id: @Model.Id</p>*@
+                <p class="card-text">Email: Model.Email</p>
+                <p class="card-text">Phone number: Model.PhoneNumber</p>
+                @*<p class="card-text">Ban: @Model.Ban</p>*@
+                @*<p class="card-text">
+                    Roles:
+                    @inject Microsoft.AspNetCore.Identity.UserManager<PortalOgloszeniowy.Models.User> userManager
+                    @foreach (var role in await userManager.GetRolesAsync(await userManager.FindByNameAsync(Model.UserName)))
+                    {
+                        <span>@role,</span>
+                    }
+                </p>*@
+                <p class="card-text">
+                    Posty:
+                      
+                            <a asp-controller="Post" asp-action="Details" asp-route-id="obj.Id">obj.Title</a>@(", ")
+                        
+                </p>
+                @*<p class="card-text">
+                    Komentarze:
+                    @if (Model.Comments != null)
+                        @foreach (var obj in Model.Comments)
+                        {
+                            @obj.Id @(", ")
+                        }
+                </p>*@
+            </div>
+            <div class="card-footer">
+
+                    <span>
+                        <a class="btn btn-warning" asp-action="Edit" asp-route-Id="Model.Id">EDYTUJ</a>
+                    </span>
+                    <span>
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-Id="Model.Id">USUN</a>
+                    </span>
+                
+            </div>
+        </div>
+    </div>
