--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Edit.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Edit.cshtml
@@ -1,5 +1,33 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model TablicaOgloszen.Models.User
 @{
+}
+<h1>Edit - USER</h1>
+
+    <div>
+        <span>
+            <a class="btn btn-primary" asp-action="Index" asp-controller="User" asp-route-id="Model.Id">Powrót</a>
+        </span>
+    </div>
+
+    <div asp-validation-summary="All"></div>
+    <form class="form-control" method="post" asp-action="Edit">
+        <label class="form-label" asp-for="UserName"></label>
+        <input class="form-control" asp-for="UserName" />
+        <span class="form-text" asp-validation-for="UserName"></span>
+        <label class="form-label" asp-for="Email"></label>
+        <input class="form-control" asp-for="Email" />
+        <span class="form-text" asp-validation-for="Email"></span>
+        <label class="form-label" asp-for="PhoneNumber"></label>
+        <input class="form-control" asp-for="PhoneNumber" />
+        <span class="form-text" asp-validation-for="PhoneNumber"></span>
+        <input class="btn btn-primary" type="submit" value="Edit" />
+    </form>
+
+    @section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 }
