Prace nad servisem bazy danych
dodawane są metody zarządzania bazą danych dla programu

--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
@@ -6,11 +6,11 @@
 
 }
 
-@if(Model != null)
-@foreach (var user in Model)
-{
-    <div>@user.Id | @user.UserName | @user.Email | @user.PhoneNumber | @user.Ban | @user.ModedBy </div>
-}
+@if (Model != null)
+    @foreach (var item in Model)
+    {
+        <div>@item.Id | @item.UserName | @item.Email | @item.PhoneNumber | @item.Ban | @item.ModedBy </div>
+    }
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
 
