--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Index.cshtml
@@ -1,9 +1,16 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model TablicaOgloszen.Models.Comment
+@model IEnumerable<Comment>
 @{
+
 }
+
+@if (Model != null)
+    @foreach (var item in Model)
+    {
+        <div>@item.Id | @item.Text | @item.Date | @item.Deleted | @item.ModedBy </div>
+    }
 
 <h1>Komentarze</h1>
 <div>
