--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -1,9 +1,17 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model IEnumerable<Post>
 @{
 
 }
+
+@if (Model != null)
+    @foreach (var item in Model)
+    {
+        <div>@item.Id | @item.Title | @item.Text | @item.Rating | @item.Date | @item.Pinned | @item.Deleted | @item.ModedBy </div>
+    }
+
 <h1>Index - POSTS</h1>
 <div class="container mt-5 mb-5 text-center">
     <a asp-action="Create" type="button" class="btn btn-primary">Dodaj Ogłoszenie</a>
