Prace nad controllerami
Poprawiłem rejestracje i dodawanie urzytkowników, wyświetlanie listy urzytkowników poprawki, dodanie wyświetlania Postów, wdrażanie modelu do widoku

--- a/Project/TablicaOgloszen/TablicaOgloszen/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -11,6 +11,8 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
+            @if (Model.Input != null)
+            {<a href="@Model.Input.link" class="btn btn-primary">CONFIRM</a>}
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
