--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -5,79 +5,84 @@
 @{
 
 }
-
-@if (Model != null)
-    @foreach (var item in Model)
-    {
-        <div>@item.Id | @item.Title | @item.Text | @item.Rating | @item.Date | @item.Pinned | @item.Deleted | @item.ModedBy </div>
-    }
-
-<h1>Index - POSTS</h1>
+@*<h1>Index - POSTS</h1>*@
 <div class="container mt-5 mb-5 text-center">
     <a asp-action="Create" type="button" class="btn btn-primary">Dodaj Ogłoszenie</a>
 </div>
-
-<div class="container mt-5 mb-5">
-    <div class="row d-flex align-items-center justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="d-flex justify-content-between p-2 px-3">
-                    <div class="d-flex flex-row align-items-center">
-                        <img src="https://i.imgur.com/tdi3NGa.jpg" width="50" class="rounded-circle">
-                        <div class="d-flex flex-column m-2">
-                            <span class="font-weight-bold">
-
-                                <b><a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="owner.UserName">owner.UserName</a></b>
-
-                            </span>
-                            <small class="text-primary">
-                                <a asp-action="Details" asp-route-id="item.Id">
-                                    item.Title
-                                </a>
-                            </small>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-row mt-1 ellipsis">
-                        <small class="mr-2">Likes: item.UpVotes</small> <i class="fa fa-ellipsis-h"></i>
-                    </div>
-                </div>
-                <div class="p-2">
-                    <p class="text-justify">
-                        item.Text
-                    </p>
-                    <hr>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="d-flex flex-row"> <span>Data dodania: item.Date</span> </div>
-                        <div class="d-flex flex-row"> <span>Ilość komentarzy: item.Comments.ToList().Count()</span> </div>
-                    </div>
-                    <div class="d-flex flex-row muted-color">
-                        Tags:@(" ")
-                    </div>
-                    <hr>
-                    <div class="comments">
-                        Najnowszy Komentarz:
-                        <div class="d-flex flex-row mb-2">
-                            <div class="d-flex flex-column ml-2">
-                                <span class="name">comment.Date</span>
-                                <small class="comment-text">comment.Text</small>
+@if (Model != null)
+{
+    @foreach (var item in Model)
+    {
+        if (item.Deleted == false)
+        {
+            <div class="container mt-5 mb-5">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="d-flex justify-content-between p-2 px-3">
+                                <div class="d-flex flex-row align-items-center">
+                                    <img src="https://i.imgur.com/tdi3NGa.jpg" width="50" class="rounded-circle">
+                                    <div class="d-flex flex-column m-2">
+                                        <span class="font-weight-bold">
+                                            <b><a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@item.Owner.Id">@item.Owner.UserName</a></b>
+                                        </span>
+                                        <small class="text-primary">
+                                            <a asp-action="Details" asp-route-id="@item.Id">
+                                                @item.Title
+                                            </a>
+                                        </small>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-row mt-1 ellipsis">
+                                    <small class="mr-2">Likes: @item.Rating</small> <i class="fa fa-ellipsis-h"></i>
+                                    @if (item.Pinned)
+                                    {<i class="bi bi-pin-fill"></i>}
+                                </div>
+                            </div>
+                            <div class="p-2">
+                                <p class="text-justify">
+                                    @item.Text
+                                </p>
+                                <hr>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="d-flex flex-row"> <span>Data dodania: @item.Date</span> </div>
+                                    @*<div class="d-flex flex-row"> <span>Ilość komentarzy: item.Comments.ToList().Count()</span> </div>*@
+                                </div>
+                                <div class="d-flex flex-row muted-color">
+                                    Tags:@(" ")
+                                </div>
+                                <hr>
+                                <div class="comments">
+                                    Najnowsze Komentarz:
+                                    @foreach (var comment in item.Comments)
+                                    {
+                                        <div class="d-flex flex-row mb-2">
+                                            <div class="d-flex flex-column ml-2">
+                                                <span class="name"> | @comment.Users_Id | </span>
+                                                <span class="comment-text"> @comment.Date </span>
+                                                <div class="comment-text"> @comment.Text </div>
+                                            </div>
+                                        </div>
+                                    }
+                                </div>
+                                <hr>
+                                <div class="container-fluid p-0">
+                                    <span>Options:</span>
+                                    <span>
+                                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edytuj Ogłoszenie</a>
+                                    </span>
+                                    <span>
+                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie</a>
+                                    </span>
+                                    <span>
+                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie jako moderator</a>
+                                    </span>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <hr>
-                    <div class="container-fluid p-0">
-                        <span>Options:</span>
-                        <span>
-                            <a class="btn btn-warning" asp-action="Edit" asp-route-id="item.Id">Edytuj Ogłoszenie</a>
-                        </span>
-                        <span>
-                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="item.Id">Usuń Ogłoszenie</a>
-                        </span>
-                        <span>
-                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="item.Id">Usuń Ogłoszenie jako moderator</a>
-                        </span>
-                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
+        }
+    }
+}
