--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model IEnumerable<Post>
+@model IEnumerable<TablicaOgloszen.Models.PostIndex>
 @{
 
 }
