--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
@@ -13,35 +13,20 @@
         {
             <div class="col">
                 <div class="card h-100">
-                    <h5 class="card-header">@item.UserName</h5>
+                    <a asp-action="Details" asp-route-id="@item.Id"><h5 class="card-header">@item.UserName</h5></a>
                     <div class="card-body">
                         <p class="card-title">Id: @item.Id</p>
                         <p class="card-text">Name: @item.UserName</p>
                         <p class="card-text">Email: @item.Email</p>
                         <p class="card-text">Phone number: @item.PhoneNumber</p>
-                        <p class="card-text">Ban: @item.Ban</p>
-                        <p class="card-text">Moded By: @item.ModedBy</p>
                         <p class="card-text">
                             Roles:
 
-                            <span>role,</span>
-
                         </p>
-                        <p class="card-text">
-                            Posty:
-
-                            <a asp-controller="Post" asp-action="Details" asp-route-id="obj.Id">obj.Title</a>@(", ")
-
-                        </p>
-                        <p class="card-text">
-                            Komentarze:
-
-                            obj.Id @(", ")
-
-                        </p>
+                        <p class="card-text">Ban: @item.Ban</p>
+                        <p class="card-text">Moded By: @item.ModedBy</p>
                     </div>
                     <div class="card-footer">
-
                         <span>
                             <a asp-action="Ban" asp-route-name="@item.UserName" class="btn btn-danger">Zablokuj</a>
                         </span>
@@ -52,16 +37,12 @@
                         <span>
                             <a asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-warning">Edytuj</a>
                         </span>
-                        @*<span>
-                            <a asp-action="Delete" asp-route-Id="@item.Id" class="btn btn-danger">Usuń</a>
-                        </span>*@
                         <span>
                             <a asp-action="ModGrant" asp-route-name="@item.UserName" class="btn btn-primary">Grant Moderator</a>
                         </span>
                         <span>
                             <a asp-action="ModRevoke" asp-route-name="@item.UserName" class="btn btn-secondary">Revoke Moderator</a>
                         </span>
-
                     </div>
                 </div>
             </div>
