--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
@@ -1,17 +1,19 @@
-﻿@model TablicaOgloszen.Models.Post
+﻿@model TablicaOgloszen.Models.PostDetails
 
 @if (Model != null)
 {
     <div class="container mt-5 mb-5">
         <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-md-6">
+            <div class="col-md-10">
                 <div class="card">
                     <div class="d-flex justify-content-between p-2 px-3">
                         <div class="d-flex flex-row align-items-center">
                             <img src="https://i.imgur.com/tdi3NGa.jpg" width="50" class="rounded-circle">
                             <div class="d-flex flex-column m-2">
                                 <span class="font-weight-bold">
-                                    <b><a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="owner.UserName">owner.UserName</a></b>
+                                    <b>
+                                        <a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@Model.Owner.Id">@Model.Owner.UserName</a>
+                                    </b>
                                 </span>
                                 <small class="text-primary">
                                     <a asp-action="Details" asp-route-id="@Model.Id">
@@ -21,10 +23,8 @@
                             </div>
                         </div>
                         <div class="d-flex flex-row mt-1 ellipsis">
-                            <small class="mr-2">Likes: @Model.Rating </small>
-
+                            <small class="mr-2" style="margin-right:5px;">Polubienia: @Model.Rating </small>
                             <a asp-action="UpVote" asp-route-id="@Model.Id"><i class="bi bi-heart-fill text-danger"></i></a>
-
                         </div>
                     </div>
                     <div class="p-2">
@@ -33,37 +33,40 @@
                         </p>
                         <hr>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="d-flex flex-row"> <span>Data dodania: @Model.Date</span> </div>
-                            <div class="d-flex flex-row"> <span>Ilość komentarzy: 0</span> </div>
+                            <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventer.DateConvert(Model.Date)</span> </div>
+                            <div class="d-flex flex-row"> <span>Ilość komentarzy: @Model.CommentsCount</span> </div>
                         </div>
-                        <div class="d-flex flex-row muted-color">
-                            Tags:@(" ")
-
-
+                        <hr>
+                        <div class="muted-color">Tags: 
+                            @foreach (var tag in Model.Tags)
+                            {
+                                <small class="comment-text">#@tag.Text</small>@(" ")
+                            }
                         </div>
                         <hr>
                         <div class="comments">
-
                             <span>
                                 <a asp-controller="Comment" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-primary">Dodaj komentarz</a>
                             </span>
-
-                            <div class="d-flex flex-row mb-2">
-                                <a asp-controller="Comment" asp-action="Index" asp-route-id="@Model.Id">Komentarze: </a>
+                            <span>
+                                <a asp-controller="Comment" asp-action="Index" asp-route-id="@Model.Id" class="btn btn-secondary">Komentarze</a>
+                            </span>
+                            <div class="d-flex flex-column mb-2">
+                                @foreach (var comment in Model.Comments)
+                                {
+                                    <div class="d-flex flex-row mb-2">
+                                        <div class="ml-2">
+                                            @*<a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@comment.Users_Id"><span class="name">JAKAŚ NAZWA</span></a>
+                            <span class="comment-text"> - @comment.Date </span>*@
+                                            <span class="comment-text"> - @comment.Text </span>
+                                        </div>
+                                    </div>
+                                }
                             </div>
-
-                            <div class="d-flex flex-row mb-2">
-                                <div class="d-flex flex-column ml-2">
-                                    <span class="name">tag.Date</span> <small class="comment-text">tag.Text</small>
-                                </div>
-                            </div>
-
                         </div>
                         <hr>
                         <div class="container-fluid p-0">
-
-                            <span>Options:</span>
-
+                            <span>Opcje:</span>
                             <span>
                                 <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edytuj</a>
                             </span>
@@ -73,15 +76,12 @@
                             <span>
                                 <a asp-controller="Post" asp-action="Tags" asp-route-id="@Model.Id" class="btn btn-primary">zarządzaj Tagami</a>
                             </span>
-
                             <span>
                                 <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Usuń jako moderator</a>
                             </span>
-
                             <span>
                                 <a asp-action="Report" asp-route-id="@Model.Id" class="btn btn-danger">Zgłoś</a>
                             </span>
-
                         </div>
                     </div>
                 </div>
