--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
@@ -1,11 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model IEnumerable<TablicaOgloszen.Models.User>
-@{
+﻿@model IEnumerable<TablicaOgloszen.Models.User>
 
-}
-
+<h1> Użytkownicy </h1>
 @if (Model != null)
 {
     <div class="row row-cols-1 row-cols-md-3 g-4">
