--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -56,7 +56,7 @@
                                         </div>
                                     }
                                 </div>
-                                <hr>
+                                @*<hr>
                                 <div class="container-fluid p-0">
                                     <span>Options:</span>
                                     <span>
@@ -68,7 +68,7 @@
                                     <span>
                                         <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie jako moderator</a>
                                     </span>
-                                </div>
+                                </div>*@
                             </div>
                         </div>
                     </div>
