--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
@@ -33,7 +33,7 @@
                         </p>
                         <hr>
                         <div class="d-flex justify-content-between align-items-center">
-                            <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventer.DateConvert(Model.Date)</span> </div>
+                            <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(Model.Date)</span> </div>
                             <div class="d-flex flex-row"> <span>Ilość komentarzy: @Model.CommentsCount</span> </div>
                         </div>
                         <hr>
