--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -1,13 +1,17 @@
-﻿@model IEnumerable<TablicaOgloszen.Models.PostIndex>
+﻿@model Tuple<List<TablicaOgloszen.Models.PostIndex>, TablicaOgloszen.Models.Permissions>
 
 <div class="container mt-5 mb-5 text-center">
     <a asp-action="Create" type="button" class="btn btn-primary">Dodaj Ogłoszenie</a>
 </div>
 @if (Model != null)
 {
-    @foreach (var item in Model)
+    @foreach (var item in Model.Item1)
     {
-        if (item.Deleted == false)
+        if (
+            (item.Deleted == false && Model.Item2.Level != TablicaOgloszen.Models.PermissionsRole.Ban) ||
+            (Model.Item2.Level == TablicaOgloszen.Models.PermissionsRole.Administrator) ||
+            (Model.Item2.Level == TablicaOgloszen.Models.PermissionsRole.Moderator)
+           )
         {
             <div class="container mt-5 mb-5">
                 <div class="row d-flex align-items-center justify-content-center">
@@ -39,7 +43,7 @@
                                 </p>
                                 <hr>
                                 <div class="d-flex justify-content-between align-items-center muted-color">
-                                    <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventer.DateConvert(item.Date)</span> </div>
+                                    <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(item.Date)</span> </div>
                                     @*<div class="d-flex flex-row"> <span>Ilość komentarzy: item.Comments.ToList().Count()</span> </div>*@
                                 </div>
                                 <hr>
@@ -50,25 +54,25 @@
                                         <div class="d-flex flex-row mb-2">
                                             <div class="ml-2">
                                                 @*<a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@comment.Users_Id"><span class="name">@comment.Users_Id</span></a>
-                                                <span class="comment-text"> - @comment.Date </span>*@
+                                                    <span class="comment-text"> - @comment.Date </span>*@
                                                 <span class="comment-text"> - @comment.Text </span>
                                             </div>
                                         </div>
                                     }
                                 </div>
                                 @*<hr>
-                                <div class="container-fluid p-0">
-                                    <span>Options:</span>
-                                    <span>
-                                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edytuj Ogłoszenie</a>
-                                    </span>
-                                    <span>
-                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie</a>
-                                    </span>
-                                    <span>
-                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie jako moderator</a>
-                                    </span>
-                                </div>*@
+                                    <div class="container-fluid p-0">
+                                        <span>Options:</span>
+                                        <span>
+                                            <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edytuj Ogłoszenie</a>
+                                        </span>
+                                        <span>
+                                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie</a>
+                                        </span>
+                                        <span>
+                                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie jako moderator</a>
+                                        </span>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
