--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Home/Privacy.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Polityka Prywatności";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="fw-light text-white m-0">@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h5 class="fw-light text-white m-0">Zachowywać się z szacunkiem i uprzejmością.</h5>
