--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TablicaOgloszen.Models.User>
+﻿@model List<TablicaOgloszen.Models.User>
 
 <h1> Użytkownicy </h1>
 @if (Model != null)
