--- a/Project/TablicaOgloszen/TablicaOgloszen/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,16 +2,16 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Zaloguj się";
 }
 
 <h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-10">
         <section>
-            <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
+            <form class="form form-control" id="account" method="post">
+                @*<h4>Use a local account to log in.</h4>
+                <hr />*@
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Input.Email"></label>
@@ -35,20 +35,20 @@
                     <button type="submit" class="btn btn-primary">Log in</button>
                 </div>
                 <div class="form-group">
-                    <p>
+                    <div>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                         <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
+                    </div>
+                    <div>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
+                    </div>
                 </div>
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -77,7 +77,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
