--- a/Project/TablicaOgloszen/TablicaOgloszen/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Zarejestruj się";
 }
 
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
+    <div class="col-md-10">
+        <form class="form form-control" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+            @*<h4>Create a new account.</h4>
+            <hr />*@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
@@ -30,7 +30,7 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to register.</h4>
             <hr />
@@ -59,7 +59,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
