--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Home/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="d-flex flex-column justify-content-center" style="min-height:50vh">
+    <div class="d-flex flex-column justify-content-center align-items-center">
+        <h1 class="fw-light text-white m-0">Witamy na Tablicy Ogłoszeń</h1>
+        <h5 class="fw-light text-white m-0">— Od ludzi dla ludzi —</h5>
+    </div>
 </div>
