--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Create.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Create.cshtml
@@ -1,16 +1,21 @@
 ﻿@model TablicaOgloszen.Models.Post
 
 <h1>Dodaj Ogłoszenie</h1>
-
-<div asp-validation-summary="All"></div>
 <form class="form-control card card-body" method="post" asp-action="Create">
-    <label class="form-label" asp-for="Title"></label>
-    <input class="form-control" asp-for="Title" />
-    <span class="form-text" asp-validation-for="Title"></span>
-    <label class="form-label" asp-for="Text"></label>
-    <input class="form-control" asp-for="Text" />
-    <span class="form-text" asp-validation-for="Text"></span>
-    <input class="btn btn-primary" type="submit" value="Create" />
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label class="form-label" asp-for="Title"></label>
+        <input class="form-control" asp-for="Title" />
+        <span class="form-text" asp-validation-for="Title"></span>
+    </div>
+    <div class="form-group">
+        <label class="form-label" asp-for="Text"></label>
+        <input class="form-control" asp-for="Text" />
+        <span class="form-text" asp-validation-for="Text"></span>
+    </div>
+    <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="Create" />
+    </div>
 </form>
 
 @section Scripts{
