--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -1,17 +1,13 @@
-﻿@model Tuple<List<TablicaOgloszen.Models.PostIndex>, TablicaOgloszen.Models.Permissions>
+﻿@model List<TablicaOgloszen.Models.PostIndex>
 
-<div class="container mt-5 mb-5 text-center">
-    <a asp-action="Create" type="button" class="btn btn-primary">Dodaj Ogłoszenie</a>
-</div>
+<div class="" asp-validation-summary="All"></div>
 @if (Model != null)
 {
-    @foreach (var item in Model.Item1)
+    <div class="container mt-5 mb-5 text-center">
+        <a asp-action="Create" type="button" class="btn btn-primary">Dodaj Ogłoszenie</a>
+    </div>
+    @foreach (var item in Model)
     {
-        if (
-            (item.Deleted == false && Model.Item2.Level != TablicaOgloszen.Models.PermissionsRole.Ban) ||
-            (Model.Item2.Level == TablicaOgloszen.Models.PermissionsRole.Administrator) ||
-            (Model.Item2.Level == TablicaOgloszen.Models.PermissionsRole.Moderator)
-           )
         {
             <div class="container mt-5 mb-5">
                 <div class="row d-flex align-items-center justify-content-center">
@@ -19,31 +15,53 @@
                         <div class="card">
                             <div class="d-flex justify-content-between p-2 px-3">
                                 <div class="d-flex flex-row align-items-center">
-                                    <img src="https://i.imgur.com/tdi3NGa.jpg" width="50" class="rounded-circle">
+                                    <img src="https://i.imgur.com/tdi3NGa.png" width="50" class="rounded-circle">
                                     <div class="d-flex flex-column m-2">
                                         <span class="font-weight-bold" style="font-size:120%;">
                                             <b><a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@item.Owner.Id">@item.Owner.UserName</a></b>
                                         </span>
                                         <small class="text-primary">
-                                            <a asp-action="Details" asp-route-id="@item.Id">
-                                                @item.Title
+                                            <a asp-action="Details" asp-route-id="@item.post.Id">
+                                                @item.post.Title
                                             </a>
                                         </small>
                                     </div>
                                 </div>
-                                <div class="d-flex flex-row mt-1 ellipsis">
-                                    <small class="mr-2" style="margin-right:5px;">Likes: @item.Rating</small> @*<i class="bi bi-three-dots-vertical" style="margin-right:5px;"></i>*@
-                                    @if (item.Pinned)
-                                    {<i class="bi bi-pin-fill"></i>}
+                                <div class="d-flex flex-row ellipsis">
+                                    <div class="d-flex flex-column justify-content-start align-items-center">
+                                        <ul class="ratings d-flex flex-row justify-content-start align-items-center" style="list-style:none;margin:0;padding:0;">
+                                            <li><i class="bi bi-star"></i></li>
+                                            <li><i class="bi bi-star"></i></li>
+                                            <li><i class="bi bi-star"></i></li>
+                                            <li><i class="bi bi-star"></i></li>
+                                            <li><i class="bi bi-star"></i></li>
+                                        </ul>
+                                        <div class="review-count">średnia: @item.post.Rating</div>
+                                    </div>
+                                    @*<i class="bi bi-three-dots-vertical" style="margin-right:5px;"></i>*@
+                                    @inject TablicaOgloszen.Services.MyPermissionsManagerService per
+                                    @{
+                                        await per.getPermissions(User);
+                                        if (per.permissions.Level >= PermissionsRole.Moderator)
+                                        {
+                                            @if (item.post.Pinned)
+                                            {
+                                                <i class="bi bi-pin-fill"></i>}
+                                            else
+                                            {
+                                                <i class="bi bi-pin"></i>
+                                            }
+                                        }
+                                    }
                                 </div>
                             </div>
                             <div class="p-2">
                                 <p class="text-justify">
-                                    @item.Text
+                                    @item.post.Text
                                 </p>
                                 <hr>
                                 <div class="d-flex justify-content-between align-items-center muted-color">
-                                    <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(item.Date)</span> </div>
+                                    <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(item.post.Date)</span> </div>
                                     @*<div class="d-flex flex-row"> <span>Ilość komentarzy: item.Comments.ToList().Count()</span> </div>*@
                                 </div>
                                 <hr>
