--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Shared/_Layout.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TablicaOgloszen</title>
+    @{ViewData["siteName"] = "Tablica Ogłoszeń";}
+    <title>@ViewData["Title"] - Tablica Ogłoszeń</title>
 
     @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />*@
     <link rel="stylesheet" href="~/css/site.css" />
@@ -19,37 +20,47 @@
 
 </head>
 <body>
-    <div class="background-image"></div>
+    <div class="background-image"> a </div>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Eighth navbar example">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TablicaOgloszen</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@ViewData["siteName"]</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarsExample05">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house"></i> Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield"></i> Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Post" asp-action="Index"><i class="bi bi-card-text"></i> Ogłoszenia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Notification" asp-action="Index">
-                                <i class="bi bi-bell"></i> Powiadomienia
-                                <span>(</span>
-                                0
-                                <span>)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index"><i class="bi bi-people"></i> Użytkownicy</a>
-                        </li>
-                    </ul>
+                    @inject TablicaOgloszen.Services.MyPermissionsManagerService per
+                    @{
+                        await per.getPermissions(User);
+                        if (per.permissions.Level > PermissionsRole.Ban)
+                        {
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house"></i> Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield"></i> Privacy</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Post" asp-action="Index"><i class="bi bi-card-text"></i> Ogłoszenia</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Notification" asp-action="Index">
+                                        <i class="bi bi-bell"></i> Powiadomienia
+                                        <span>(</span>
+                                        0
+                                        <span>)</span>
+                                    </a>
+                                </li>
+                                @if (per.permissions.Level >= PermissionsRole.Moderator)
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index"><i class="bi bi-people"></i> Użytkownicy</a>
+                                    </li>
+                                }
+                            </ul>
+                        }
+                    }
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -68,7 +79,7 @@
                     <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
                     </a>
-                    <span>&copy; 2022 - TablicaOgloszen - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></span>
+                    <span>&copy; 2022 - @ViewData["siteName"] - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></span>
                 </div>
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                     <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-twitter"></i></a></li>
